0.2.0
Fixed sending empty "%u" to launchers.
Fixed dropping text on launchers.
Fixed slider control visibility.
Fixed missing .desktop files from appmenu.
Fixed volume slider icon AGAIN!.
Fixed volume slider icon.
Fixed setting absolute position of panels.
Added extra prefs to handle transparent windows, etc.
Fixed occasional segfault in window menu.
Fixed menu items from bad window names.
Fixed segfault on window list.
Fixed blank window names on window list.
Send notify async in case deamon not running.
Ignore desktopfiles with nodisplay=true.
Improved startup speed of appmenu.
Use new prefs class.
Fixed random spacing appearing in right gadgets.
Added notifications to launchers ( can be disabled ).
Fixed crash if non .desktop files in lanchers folder.
Changed width of spacer widget to be same as launcher widgets.
Added DnD to launcher gadgets, now accpts uris or text.
Dragging .desktop file to panel now adds to launchers.
Added DnD to panels.
Updated for new lfstk API's.

0.1.4
Fixed panel size on multiple monitors.
Added ~/.local/share/applications to search path for application menu.
Fixed parsing Exec in desktop files.
Added alsa dependency.
Fixed updating vol slider.
Reversed vol slider on vertical panels.
Added Volume control.
Redone windowlists to use new menus.
Redone logout to use new menus.
Fixed messaging for multiple panels.
Fixed appmenu exec regex.
Added messaging.
Canged appmenu to new menu/find class.

0.1.3
Updated to use pkg-config for toolkit.
Updated for tool kit update.

0.1.2
Removed disclosure triangles from main buttons.
Updated to use cairo.
Fixed segfault.
Fixed some icons not scaling properly.

0.1.1
Code clean.
Updated for new lib version.

0.1.0
Fixed missing last window on global window list.
Fixed showing hidden windows in main window list.
Fixed minor graphical bug.
Synched versions to "0.1.0".
Commited to github.

0.0.5
Removed need for external script to get window lists.
Changed to using imlib2 image for button icons.